{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "InBed",
            "id": "9f110178-9868-45dd-9ce6-dd71dfd402f3",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "2fe1f354-4500-4753-9a9e-1ac3f2ad434c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Toggle Flashlight",
                    "type": "Button",
                    "id": "d08e3967-131c-4f12-90e2-c6f325dffc9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleGoUnderBed",
                    "type": "Button",
                    "id": "0d1d5f5a-1855-4933-9042-ca98e55b79ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetOutOfBed",
                    "type": "Button",
                    "id": "8ae5082b-c17d-4081-836f-e00cea02d700",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sleep",
                    "type": "Button",
                    "id": "027e2a3f-2423-498c-95b4-09ef822266a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fd278ad-7e2f-4a9c-92c2-bf39e0b5b795",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a85549da-77f6-4521-8f80-9dbf85b1edd3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04369d8e-b5a0-4736-b9d0-0cf3d00e5fee",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleGoUnderBed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92a53fc3-8bee-449f-b836-f5cd3fb3a2ed",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetOutOfBed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8490057-5f46-4e88-93d5-bd9e0d2f420b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sleep",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OutOfBed",
            "id": "1bd69809-3683-44fc-8037-d53493e510b2",
            "actions": [
                {
                    "name": "Toggle Flashlight",
                    "type": "Button",
                    "id": "aea011c5-61ab-4d69-a259-9a03ff7894da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "14932ff3-2306-4434-af1f-ef8847ad6d07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6889e0ea-4cb8-4e4d-ab4c-097420d22540",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GetInBed",
                    "type": "Button",
                    "id": "23711b06-e4a5-4461-b73f-a99ecae39c68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aab1bcf4-1765-42c8-a549-dfac5be6ac38",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85aef309-4998-4b68-a5ea-247eb435c484",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "5aa5c580-d3e0-4b79-8f5c-9a7a320d0978",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "85d86a50-5a17-4109-a244-b3a19a8a468a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c6e2a306-4cad-418c-ac0c-e133f6ea798b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f50dd881-dbd8-4dea-87ff-a18b2f9d8cb9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "174bd233-aa66-4666-aa3c-86841e501958",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "591beb9c-a40e-40ec-9bd0-2f0508013c25",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetInBed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}